--- a/style.css
+++ b/style.css
@@ -134,10 +134,6 @@ a {
     width: 50%;;
 }
 
-footer {
-    background-color: #677160ff;
-}
-
 .container-card {
     background-color: #b1bcabff;
     padding: 5vw 5vw 0 5vw;
@@ -161,57 +157,6 @@ main {
     overflow-x: hidden;
 }
 
-fieldset {
-    border-radius: 10px;
-    padding: 10px;
-    margin-left: 3vw;
-    margin-right: 3vw;
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(1, 0.9fr);
-    width: 20%;
-}
-
-textarea {
-    border-radius: 5px;
-    width: 95%;
-    height: 150px;
-    padding: 5px;
-    margin-bottom: 10px;
-    background-color: #f3f3f3;
-}
-
-.css-button-local {
-    border-radius: 10px;
-    background-color: #1e1e1eff;
-    padding: 5px 40px 5px 40px;
-    color: white;
-    margin-left: 3vw;
-    height: 40px
-}
-
-.css-button-show-local {
-    border: 0;
-    margin: 2vw;
-    font-size: 1.4rem;
-    font-weight: bold;
-    background-color: white;
-    padding: 0
-}
-
-.css-format-local {
-    border-radius: 5px;
-    width: 95%;
-    padding: 5px;
-    background-color: #f3f3f3;
-}
- 
-label {
-    margin-top: 20px;
-    margin-bottom: 10px;
-    color: white
-}
-
 .background-img {
     width: 100%;
 }
@@ -222,5 +167,83 @@ label {
     min-width: 250px; 
     border-radius: 5px;
 }
+
+footer {
+    background-color: #677160ff;
+    padding: 15px;
+    gap: 20px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+footer h3 {
+    color: white;
+    margin-top: 10px;
+}
+
+footer nav a {
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px 0;
+}
+
+input[type="email"] {
+    padding: 10px;
+    margin-right: 10px;
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
+button {
+    padding: 10px 10px;
+    background-color: #1e1e1eff;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+    color: white;
+    font-size: 1em;
+}
+
+footer p {
+    color: white;
+}
+
+.css-button-local {
+    border-radius: 10px;
+    background-color: #383838;
+    padding: 5px 40px 5px 40px;
+    color: white;
+    height: 40px;
+    margin-bottom: 20px;
+}
+
+.css-form-custom {
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    background: linear-gradient(to bottom, #b0b0a4ff,#b1bcabff);
+}
+
+fieldset {
+    width: 50%;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 20px;
+    margin-top: 40px;
+}
+
 
 
