--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a {
     flex-direction: row;
     justify-content: space-between !important;
     padding: 15px 70px 15px 70px;
-    background-color: (255, 255, 255, 0.5) !important;
+    /* background-color: (255, 255, 255, 0.5) !important; */
     position: fixed !important;
     top: 40px;
     z-index: 1000;
@@ -157,7 +157,7 @@ main {
     overflow-x: hidden;
 }
 
-.background-img {
+.backgroundImg {
     width: 100%;
 }
 
@@ -246,6 +246,9 @@ fieldset {
     margin-top: 100px;
 }
 
+.dropdown-menu {
+    background-color: rgba(255, 255, 255, 0.1)!important;
+}
 
 
 
